# shifts

./: .gitignore  Makefile  Procfile  pyproject.toml
backend/: .env.example  README.md  main.py  requirements.txt
frontend/: FRONT-SABINA.html  index.html  landing.html
